--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sofware Development</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Judul</h1>
+        <h3>Sub judul</h3>
+    </header>
+    <main>
+        <p>hai</p>
+    </main>
 </body>
 </html>
